crates/compiler/tests/parse_errors/import_alias.elm
module Main exposing (..)
import Html as 5
